@@ -70,9 +70,9 @@ public class RecordXMLParserTest {
         var result = new RecordXMLParser(cmmStudyMapper).getRecord(repo, Path.of(recordXML.toURI()));
 
         then(result).hasSize(1);
-        utils.validateCMMStudyResultAgainstSchema(result.get(0));
+        utils.validateCMMStudyResultAgainstSchema(result.getFirst());
 
-        String actualJson = objectMapper.writeValueAsString(result.get(0));
+        String actualJson = objectMapper.writeValueAsString(result.getFirst());
 
         // Check if the JSON generated differs from the expected source
         assertEquals(expectedJson, actualJson, true);
@@ -90,17 +90,17 @@ public class RecordXMLParserTest {
 
         then(optionalResult).hasSize(1);
 
-        var result = optionalResult.get(0);
+        var result = optionalResult.getFirst();
 
         // Verifies timeMeth extraction
         then(result.typeOfTimeMethods().size()).isEqualTo(2);
-        then(result.typeOfTimeMethods().get("fi").get(0).term()).isEqualTo("Pitkittäisaineisto: trendi/toistuva poikkileikkausaineisto");
-        then(result.typeOfTimeMethods().get("en").get(0).term()).isEqualTo("Longitudinal: Trend/Repeated cross-section");
+        then(result.typeOfTimeMethods().get("fi").getFirst().term()).isEqualTo("Pitkittäisaineisto: trendi/toistuva poikkileikkausaineisto");
+        then(result.typeOfTimeMethods().get("en").getFirst().term()).isEqualTo("Longitudinal: Trend/Repeated cross-section");
 
         // Verifies unitTypes extraction
         then(result.unitTypes().size()).isEqualTo(2);
-        then(result.unitTypes().get("fi").get(0).term()).isEqualTo("Henkilö");
-        then(result.unitTypes().get("en").get(0).term()).isEqualTo("Individual");
+        then(result.unitTypes().get("fi").getFirst().term()).isEqualTo("Henkilö");
+        then(result.unitTypes().get("en").getFirst().term()).isEqualTo("Individual");
     }
 
     @Test
@@ -114,7 +114,7 @@ public class RecordXMLParserTest {
 
         // Then
         then(record).hasSize(1);
-        utils.validateCMMStudyResultAgainstSchema(record.get(0));
+        utils.validateCMMStudyResultAgainstSchema(record.getFirst());
     }
 
     @Test
@@ -127,9 +127,9 @@ public class RecordXMLParserTest {
         // When
         var record = new RecordXMLParser(cmmStudyMapper).getRecord(repo, Path.of(recordXML.toURI()));
         then(record).hasSize(1);
-        utils.validateCMMStudyResultAgainstSchema(record.get(0));
+        utils.validateCMMStudyResultAgainstSchema(record.getFirst());
         final ObjectMapper mapper = new ObjectMapper();
-        String jsonString = objectMapper.writeValueAsString(record.get(0));
+        String jsonString = objectMapper.writeValueAsString(record.getFirst());
         final JsonNode actualTree = mapper.readTree(jsonString);
 
         then(actualTree.get("dataCollectionPeriodStartdate").asText()).isEqualTo("1976-01-01T00:00:00Z");
@@ -146,7 +146,7 @@ public class RecordXMLParserTest {
 
         // When
         var record = new RecordXMLParser(cmmStudyMapper).getRecord(repo, Path.of(recordXML.toURI()));
-        String actualCmmStudyJsonString = objectMapper.writeValueAsString(record.get(0));
+        String actualCmmStudyJsonString = objectMapper.writeValueAsString(record.getFirst());
 
         // then
         assertEquals(expectedCmmStudyJsonString, actualCmmStudyJsonString, false);
@@ -167,9 +167,9 @@ public class RecordXMLParserTest {
         var record = new RecordXMLParser(cmmStudyMapper).getRecord(repo, Path.of(recordXML.toURI()));
 
         then(record).hasSize(1);
-        then(record.get(0).abstractField().size()).isEqualTo(3);
-        then(record.get(0).abstractField()).isEqualTo(expectedAbstract);
-        utils.validateCMMStudyResultAgainstSchema(record.get(0));
+        then(record.getFirst().abstractField().size()).isEqualTo(3);
+        then(record.getFirst().abstractField()).isEqualTo(expectedAbstract);
+        utils.validateCMMStudyResultAgainstSchema(record.getFirst());
     }
 
     @Test // https://github.com/cessda/cessda.cdc.versions/issues/135
@@ -187,9 +187,9 @@ public class RecordXMLParserTest {
         var record = new RecordXMLParser(cmmStudyMapper).getRecord(repo, Path.of(recordXML.toURI()));
 
         then(record).hasSize(1);
-        then(record.get(0).titleStudy().size()).isEqualTo(3);
-        then(record.get(0).titleStudy()).isEqualTo(expectedTitle);
-        utils.validateCMMStudyResultAgainstSchema(record.get(0));
+        then(record.getFirst().titleStudy().size()).isEqualTo(3);
+        then(record.getFirst().titleStudy()).isEqualTo(expectedTitle);
+        utils.validateCMMStudyResultAgainstSchema(record.getFirst());
     }
 
     @Test()
@@ -228,8 +228,8 @@ public class RecordXMLParserTest {
         var result = new RecordXMLParser(cmmStudyMapper).getRecord(repo, Path.of(recordXML.toURI()));
 
         then(result).hasSize(1);
-        utils.validateCMMStudyResultAgainstSchema(result.get(0));
-        assertThatCmmRequiredFieldsAreExtracted(result.get(0));
+        utils.validateCMMStudyResultAgainstSchema(result.getFirst());
+        assertThatCmmRequiredFieldsAreExtracted(result.getFirst());
     }
 
     @Test
@@ -270,10 +270,10 @@ public class RecordXMLParserTest {
         var result = new RecordXMLParser(cmmStudyMapper).getRecord(repository, Path.of(recordXML.toURI()));
 
         then(result).hasSize(1);
-        utils.validateCMMStudyResultAgainstSchema(result.get(0));
+        utils.validateCMMStudyResultAgainstSchema(result.getFirst());
 
         // Assert the language is as expected
-        Assert.assertNotNull(result.get(0).titleStudy().get("zz"));
+        Assert.assertNotNull(result.getFirst().titleStudy().get("zz"));
     }
 
     @Test
@@ -291,7 +291,7 @@ public class RecordXMLParserTest {
             utils.validateCMMStudyResultAgainstSchema(study);
         }
 
-        var actualJson = objectMapper.writeValueAsString(result.get(0));
+        var actualJson = objectMapper.writeValueAsString(result.getFirst());
 
         // Check if the JSON for the first study differs from the expected source
         assertEquals(expectedJson, actualJson, true);
